updated to manuscript

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -254,6 +254,28 @@
   publisher={Springer}
 }
 
+@article{garfinkel2016interoceptive,
+  title={Interoceptive dimensions across cardiac and respiratory axes},
+  author={Garfinkel, Sarah N and Manassei, Miranda F and Hamilton-Fletcher, Giles and In den Bosch, Yvo and Critchley, Hugo D and Engels, Miriam},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={371},
+  number={1708},
+  pages={20160014},
+  year={2016},
+  publisher={The Royal Society}
+}
+
+@article{vlemincx2023novel,
+  title={A novel self-report scale of interoception: the three-domain interoceptive sensations questionnaire (THISQ)},
+  author={Vlemincx, Elke and Walentynowicz, Marta and Zamariola, Giorgia and Van Oudenhove, Lukas and Luminet, Olivier},
+  journal={Psychology \& Health},
+  volume={38},
+  number={9},
+  pages={1234--1253},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
 @article{davidson2016schizotypal,
   title={Schizotypal personality questionnaire--brief revised (updated): An update of norms, factor structure, and item content in a large non-clinical young adult sample},
   author={Davidson, Charlie A and Hoffman, Lesa and Spaulding, William D},
@@ -812,6 +834,28 @@
   pages={279--295},
   year={2024},
   publisher={Taylor \& Francis}
+}
+
+@article{vig2023self,
+  title={Self-reported interoception, worries and protective behaviors during the COVID-19 pandemic: a longitudinal study},
+  author={Vig, Luca and Ferentzi, Eszter and K{\"o}teles, Ferenc},
+  journal={Psicologia: Reflex{\~a}o e Cr{\'\i}tica},
+  volume={36},
+  number={1},
+  pages={23},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{rogowska2023validation,
+  title={Validation of the shortened 24-item multidimensional assessment of interoceptive awareness, version 2 (Brief MAIA-2)},
+  author={Rogowska, Aleksandra M and Tataruch, Rafa{\l} and Klimowska, Klaudia},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={21270},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
 }
 
 @article{simkute2025interoception,
