--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -508,28 +508,37 @@ Study 2 shows that interoceptive self-report is adaptive, context-sensitive, and
 
 <!-- AIms -->
 The present study aimed to provide a comprehensive evaluation of the IAS, spanning both its structure (study 1) and its dispositional correlates (study 2). Together, these studies offer novel insights into the psychometric characteristics, conceptual interpretation, and practical applications of the IAS within the broader landscape of interoception research.
+<!-- Study 1 findings -->
+Study 1 demonstrated that the IAS is best conceptualised as clusters of tightly coupled item pairs, reflecting discrete bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena. The pairs emerged once several items (e.g., Tickle, Taste, Affective Touch) were removed due to their instability, redundancy or poor associations with the other items. The resulting 14-item refined IAS retained the psychometric integrity of the original scale while improving interpretability and efficiency. 
 
-<!-- Item Structure, Redundancy, and Scale Refinement -->
+A short version of the IAS has been proposed before. @lin2023 suggested a 12-item version by removing items with local dependency, high difficulty, and/or low discrimination. Their parallel analysis suggested unidimensionality, although this method is known to underestimate factor numbers in multidimensional data [@markos2024dimensionality;@golino2017exploratory]. In contrast, our study applied multiple methods, yet the same pairs consistently emerged across datasets and demonstrated superior fit compared to alternative models.This challenges the assumption of unidimensionality [@lin2023; @murphy2019] and resonates with theoretical perspectives that describe interoception as a multimodal, context-sensitive process rather than a singular capacity (@khalsa2018; @vlemincx2023novel].
 
-Study 1 demonstrated that the IAS is best conceptualized as clusters of tightly coupled item pairs, reflecting discrete bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena. Several items (e.g., Tickle, Taste, Affective Touch) were unstable, redundant, or poorly associated with broader interoceptive tendencies, justifying their removal. The resulting 14-item refined IAS retained the psychometric integrity of the original scale while improving interpretability and efficiency. Crucially, the item clusters reveal that the IAS does not capture a unitary construct of interoception. Instead, interoceptive self-report appears domain-specific, with meaningful differences across bodily modalities. This challenges the assumption of unidimensionality [@murphy2019; @lin2023] and resonates with theoretical perspectives that describe interoception as a multimodal, context-sensitive process rather than a singular capacity [@khalsa2018interoception].
+<!-- Study 2 findings -->
+Study 2 provided further evidence for a domain-specific perspective. Certain item pairings, particularly Hunger–Thirst and Bruise–Blood sugar, showed consistent negative correlations with depression and anxiety measures, in some cases approaching or even surpassing the strength of associations observed for the full IAS scale. Notably, these were also the only pairs, out of the seven examined, that displayed significant positive correlations with the BPQ Body Awareness, whereas the full IAS scale showed no such association. This pattern suggests that specific item pairings may show distinct patterns of association with other interoceptive measures and with mental health indices, whereas the aggregated IAS scale may obscures these relationships. This highlights that questionnaires like the IAS may capture multiple facets of interoception rather than a single underlying dimension, and that domain-specific approaches may provide greater construct validity. 
 
-<!-- Context-Specific Sensitivity of Interoception -->
+These findings mirror broader inconsistencies in the literature concerning associations between the IAS and the BPQ-A. While some studies report significant negative associations [@lin2023], others have observed significant positive associations [@gaggero2021; @todd2022; @brand2022; @campos2021], and still others none at all [@murphy2019]. In our study the full IAS was not associated with the BPQ-A. Interpretation is further complicated by conceptual debates: the BPQ Body Awareness is frequently treated as a measure of interoception, whereas the BPQ Autonomic Reactivity subscale has been criticized as indexing dysfunction in the nervous system rather than interoceptive sensitivity [@gaggero2021]. Our results lend tentative support to this interpretation, as the full IAS scale and most item pairings showed significant negative associations with the BPQ Autonomic Reactivity, with the exception of the Bruise–Blood sugar pair. This pattern is consistent with the idea that this subscale may capture maladaptive bodily experiences or autonomic dysfunction, rather than interoceptive accuracy per se. However, the Body Awareness subscale of the BPQ has also been criticized for its ambiguous instructions. It is often unclear whether respondents should interpret the items as assessing attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of experiencing such signals. As a result, studies have reported that observed associations vary depending on how the BPQ-A is construed [@campos2021; @gaggero2021; @gabriele2022dissociations]. As such, it is unclear whether the lack of a relationship between the IAS and the BPQ-A reflects a genuine divergence between the constructs measured by the two scales, or instead arises from ambiguities in how the BPQ-A is operationalized and interpreted across studies.
 
-Study 2 reinforced this domain-specific view. Certain item pairings, particularly Hunger–Thirst and Bruise–Blood sugar, consistently predicted mood and interoceptive outcomes as well as, or better than, the full scale. These findings indicate that interoceptive self-report is most informative when tied to ecologically meaningful bodily signals, echoing prior suggestions that physiological context are important in the measurement of interoception [@vlemincx2023novel]. At the same time, other pairings (e.g., cough–sneeze, wind–burp) provided little predictive value. Taken together with Study 1, this suggests that the strength of interoceptive reporting lies not in broad aggregation but in the careful targeting of specific bodily domains.
+Taken together with these debates, the discrepancies observed here highlight that some IAS pairings may capture interoceptive self-reported accuracy more effectively than the aggregated measure, raising questions about the interpretability of the full scale. By contrast, other pairings (e.g., Cough–Sneeze, Wind–Burp) were weakly or inconsistently related to external variables, raising concerns about their usefulness. Together, these findings indicate that the strength and relevance of interoceptive self-reported accuracy may vary systematically across physiological domains. At the same time, the interpretation of such associations is complicated by the lack of contextualisation in the items themselves. For example, anxiety is often experienced as heart racing (ref), yet similar sensations occur during exercise or heightened arousal more generally. Without contextual anchors, it remains unclear which bodily states participants are drawing upon when responding. In line with prior work emphasizing the importance of contextual factors in the measurement of interoception [@vlemincx2023novel], our results suggest that the value of self-report lies less in broad aggregation across domains and more in the targeted assessment of physiologically and situationally meaningful contexts.
 
-<!-- Correlates Across Psychological Domains -->
+<!-- Correlates of IAS Across Psychological Domains -->
+The dispositional correlates of the IAS provide important conceptual boundaries for the construct. Interoceptive accuracy, as assessed by the IAS, was robustly associated with mood-related outcomes, particularly depression and anxiety, underscoring its relevance for affective regulation and bodily state monitoring [@brand2023; @lin2023]. This is in line research consistently revealing the link between conditions, such as depression or anxiety and interoceptive measures. For example, divergent findings in subjective and objective measures of interoception have been linked with high anxiety symptomology [@garfinkel2016interoceptive]. At the same time, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology, suggesting that such links may not generalize across all interoceptive domains or measurement approaches [ref pre-print?]. This further highlights the need to examine interoceptive self-perception at the level of separate domains rather than aggregated scores.
 
-The dispositional correlates of the IAS provide important conceptual boundaries for the construct. Interoceptive accuracy, as assessed by the IAS, was robustly associated with mood-related outcomes, particularly depression and anxiety, underscoring its relevance for affective regulation and bodily state monitoring [@brand2023; @lin2023]. In contrast, associations with personality traits and higher-order beliefs were modest: small positive correlations emerged with Openness and Agreeableness, and weak associations with primal world beliefs. Consistent with recent work linking interoceptive self-report to personality dispositions [@simkute2025interoception; @haustein2024interoception], these results suggest that interoceptive accuracy primarily operates at the level of bodily self-perception, exerting modest influence on broader dispositional tendencies.
-
-At the same time, recent studies have reported null or inconsistent associations between interoceptive abilities and mental health symptomatology, suggesting that such links may not generalize across all interoceptive domains or measurement approaches [**ref pre-print?**]. A potential key reason for these discrepancies is the lack of a consistent theoretical framework for interoception, as dimensions are neither defined nor captured equally across questionnaires and experimental tasks [@Desmedt2023accuracy].
+In contrast, associations of IAS scores with personality traits and higher-order beliefs were modest: small positive correlations emerged with Openness and Agreeableness, and weak associations with primal world beliefs. Consistent with recent work linking interoceptive self-report to personality dispositions [@haustein2024interoception;@simkute2025interoception], these results suggest that interoceptive accuracy primarily operates at the level of bodily self-perception. This contrast reinforces the view that the IAS primarily indexes bodily self-perception, exerting only modest influence on broader dispositional traits. A potential key reason for these discrepancies is the lack of a consistent theoretical framework for interoception, as dimensions are neither defined nor captured equally across questionnaires and experimental tasks [@desmedt2022measures].[**complete paragraph**]
 
 <!-- IAS limitations and potential improvements -->
+These two studies revealed three main points. Firstly, a shortened, 14-item refined IAS retained greater psychometric integrity while removing unstable and/or redundant items. Secondly, item pairings combined with analogue-style ratings captured greater variability and allowed more precise differentiation among individuals, often outperforming global scores in predictive value. However, even the refined IAS has significant limitations. Although the 14-item version improves interpretability and efficiency, the scale continues to underrepresent key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes. This shortcoming underscores the need for broader coverage in future scale development. Nevertheless, analogue-style items and item pairings offer clear advantages: they capture greater response variability, allow more precise differentiation among individuals, and provide efficient, domain-specific indicators that often outperform global scores in predictive value. Building on these insights, a next-generation interoception scale could balance breadth (multiple items per modality) with depth (domain-specific subscales), retain the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimize coverage across physiologically and psychologically relevant bodily domains. Such a scale would improve the interpretability, sensitivity, and practical utility of interoceptive self-report measures, ultimately allowing for a more nuanced mapping of interoceptive abilities to affective, cognitive, and health-related outcomes.
 
-The structural and correlational findings converge to highlight both limitations of the IAS and opportunities for scale refinement. Although the 14-item refined version improves interpretability and efficiency, the scale continues to underrepresent key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals (i.e., only one item each), reducing variability and potentially obscuring meaningful individual differences. Nevertheless, analogue-style items and item pairings offer clear advantages: they capture greater response variability, allow more precise differentiation among individuals, and provide efficient, domain-specific indicators that often outperform global scores in predictive value. Building on these insights, a next-generation interoception scale could balance breadth (multiple items per modality) with depth (domain-specific subscales), retain the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimize coverage across physiologically and psychologically relevant bodily domains. Such a scale would improve the interpretability, sensitivity, and practical utility of interoceptive self-report measures, ultimately allowing for a more nuanced mapping of interoceptive abilities to affective, cognitive, and health-related outcomes.
+<!-- Limitations -->
+One limitation worth noting is that we did not evaluate the IAS alongside other widely used questionnaires, such as the BPQ or MAIA. Although both are frequently employed in interoception research, they present important limitations. For example, the MAIA-2 contains subscales (e.g., Not-Worrying, Not-Distracting) with weak reliability and minimal relation to a general interoception factor [@ferentzi2021examining; @rogowska2023validation]. Several other subscales primarily reflect higher-level cognitive tendencies, such as mindfulness and attentional regulation, rather than interoceptive body awareness [@vig2023self; @todd2022]. Similarly, the BPQ’s Body Awareness and Autonomic Reactivity subscales show conceptual and psychometric concerns, and BPQ scores often overlap substantially with negative affect, raising questions about their specificity as measures of interoceptive sensibility [@campos2021; @gabriele2022dissociations; @vig2023self].
+
+Because the IAS is a newly developed questionnaire and the only one designed to assess interoceptive self-reported accuracy - a dimension previously thought to require objective tasks such as the HDT and HCT - our focus was on evaluating its structure and correlates without introducing established measures with documented shortcomings. Nonetheless, future research should employ novel methods, such as Exploratory Graph Analysis, to clarify the convergent and divergent validity of these questionnaires across interoceptive domains.
+
+<!-- Future Outlook in the field -->
+
+Building on these limitations, a next-generation interoception scale should balance breadth (multiple items per modality, including underrepresented domains such as cardiac and respiratory) with depth (domain-specific subscales). Retaining analogue or wider rating ranges (e.g., 1–7 instead of 1–5) would further enhance sensitivity and coverage. Such a scale would improve the interpretability, sensitivity, and practical utility of interoceptive self-report measures, ultimately allowing for a more nuanced mapping of interoceptive abilities to affective, cognitive, and health-related outcomes.
 
 <!-- Conclusion -->
-
-Taken together, these studies advance understanding of the IAS and interoceptive self-report more broadly. The refined 14-item IAS provides a more efficient and interpretable measure, capturing domain-specific interoceptive signals that are differentially associated with psychological outcomes. Consistent associations with mood, alongside modest links to personality and beliefs, indicate that the IAS reflects adaptive, context-sensitive aspects of bodily self-perception rather than broad dispositional traits. At the same time, current findings highlight limitations in modality coverage and item specificity, suggesting that future scale development should incorporate multimodal, context-sensitive, and continuous analogue ratings or wider discrete scales, to better capture the richness of interoceptive processes and clarify their role in affective, cognitive, and health-related outcomes [@desmedt2022measures; @vlemincx2023novel].
+Taken together, these studies advance understanding of the IAS and interoceptive self-report more broadly. The refined 14-item IAS provides a more efficient and interpretable measure, capturing domain-specific interoceptive signals that are differentially associated with psychological outcomes. Consistent associations with mood, alongside modest links to personality and beliefs, indicate that the IAS reflects adaptive, context-sensitive aspects of bodily self-perception rather than broad dispositional traits. At the same time, current findings highlight limitations in modality coverage and item specificity, suggesting that future scale development should incorporate multimodal, context-sensitive, and continuous analogue ratings or wider discrete scales to better capture the richness of interoceptive processes and clarify their role in affective, cognitive, and health-related outcomes [@desmedt2022measures; @vlemincx2023novel]. Ultimately, these studies show that the IAS is most informative when treated as a set of domain-specific, context-sensitive indicators rather than as a broad global index, advancing both the measurement and theoretical understanding of interoception.
 
 # References
 
