--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -37,6 +37,28 @@
   publisher={American Psychological Association}
 }
 
+@article{rogowska2023validation,
+  title={Validation of the shortened 24-item multidimensional assessment of interoceptive awareness, version 2 (Brief MAIA-2)},
+  author={Rogowska, Aleksandra M and Tataruch, Rafa{\l} and Klimowska, Klaudia},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={21270},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{vig2023self,
+  title={Self-reported interoception, worries and protective behaviors during the COVID-19 pandemic: a longitudinal study},
+  author={Vig, Luca and Ferentzi, Eszter and K{\"o}teles, Ferenc},
+  journal={Psicologia: Reflex{\~a}o e Cr{\'\i}tica},
+  volume={36},
+  number={1},
+  pages={23},
+  year={2023},
+  publisher={Springer}
+}
+
 @article{markos2024dimensionality,
   title={Dimensionality assessment in ordinal data: a comparison between parallel analysis and exploratory graph analysis},
   author={Markos, Angelos and Tsigilis, Nikolaos},
@@ -46,6 +68,57 @@
   year={2024},
   publisher={Frontiers Media SA}
 }
+@article{nguyen2014introduction,
+  title={An introduction to item response theory for patient-reported outcome measurement},
+  author={Nguyen, Tam H and Han, Hae-Ra and Kim, Miyong T and Chan, Kitty S},
+  journal={The Patient-Patient-Centered Outcomes Research},
+  volume={7},
+  number={1},
+  pages={23--35},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{simkute2025interoception,
+  title={Interoception, personality, and internet use: Preliminary insights into their association},
+  author={Simkute, Dovile and Wang, Grace Y and Griskova-Bulanova, Inga},
+  journal={Plos one},
+  volume={20},
+  number={7},
+  pages={e0328260},
+  year={2025},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{haustein2024interoception,
+  title={Interoception, affect, and cognition in older adults},
+  author={Haustein, Marcus and Thomas, Emily BK and Scheer, Kodi and Denburg, Natalie L},
+  journal={Experimental aging research},
+  volume={50},
+  number={3},
+  pages={279--295},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
+
+@article{banellis2025interoceptive,
+  title={Interoceptive Ability is Unrelated to Mental Health Symptoms: Evidence From a Large Scale Multi-Domain Psychophysical Investigation},
+  author={Banellis, Leah and Nikolova, Niia and Fischer Ehmsen, Jesper and Courtin, Arthur S and Vejlo, Melina and Tyrer, Ashley and Bohme, Rebecca and Bavato, Francesco and Hoogervorst, Kelly and Fardo, Francesca and others},
+  journal={medRxiv},
+  pages={2025--08},
+  year={2025},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{jenkinson2024interoception,
+  title={Interoception in anxiety, depression, and psychosis: a review},
+  author={Jenkinson, Paul M and Fotopoulou, Aikaterini and Iba{\~n}ez, Agustin and Rossell, Susan},
+  journal={EClinicalMedicine},
+  volume={73},
+  year={2024},
+  publisher={Elsevier}
+}
+
 @article{vlemincx2023novel,
   title={A novel self-report scale of interoception: the three-domain interoceptive sensations questionnaire (THISQ)},
   author={Vlemincx, Elke and Walentynowicz, Marta and Zamariola, Giorgia and Van Oudenhove, Lukas and Luminet, Olivier},
@@ -195,6 +268,39 @@
   year={2002},
   publisher={LWW}
 }
+
+@article{makowski2023structure,
+  title={The structure of deception: Validation of the lying profile questionnaire},
+  author={Makowski, Dominique and Pham, Tam and Lau, Zen J and Raine, Adrian and Chen, SH Annabel},
+  journal={Current Psychology},
+  volume={42},
+  number={5},
+  pages={4001--4016},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{brotherton2013measuring,
+  title={Measuring belief in conspiracy theories: The generic conspiracist beliefs scale},
+  author={Brotherton, Robert and French, Christopher C and Pickering, Alan D},
+  journal={Frontiers in psychology},
+  volume={4},
+  pages={279},
+  year={2013},
+  publisher={Frontiers Media SA}
+}
+
+@article{rammstedt2007measuring,
+  title={Measuring personality in one minute or less: A 10-item short version of the Big Five Inventory in English and German},
+  author={Rammstedt, Beatrice and John, Oliver P},
+  journal={Journal of research in Personality},
+  volume={41},
+  number={1},
+  pages={203--212},
+  year={2007},
+  publisher={Elsevier}
+}
+
 @article{sibley2011mini,
   title={The Mini-IPIP6: Validation and extension of a short measure of the Big-Six factors of personality in New Zealand.},
   author={Sibley, Chris G and Luyten, Nils and Purnomo, Missy and Mobberley, Annelise and Wootton, Liz W and Hammond, Matthew D and Sengupta, Nikhil and Perry, Ryan and West-Newman, Tim and Wilson, Marc Stewart and others},
@@ -252,28 +358,6 @@
   pages={589--596},
   year={2011},
   publisher={Springer}
-}
-
-@article{garfinkel2016interoceptive,
-  title={Interoceptive dimensions across cardiac and respiratory axes},
-  author={Garfinkel, Sarah N and Manassei, Miranda F and Hamilton-Fletcher, Giles and In den Bosch, Yvo and Critchley, Hugo D and Engels, Miriam},
-  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
-  volume={371},
-  number={1708},
-  pages={20160014},
-  year={2016},
-  publisher={The Royal Society}
-}
-
-@article{vlemincx2023novel,
-  title={A novel self-report scale of interoception: the three-domain interoceptive sensations questionnaire (THISQ)},
-  author={Vlemincx, Elke and Walentynowicz, Marta and Zamariola, Giorgia and Van Oudenhove, Lukas and Luminet, Olivier},
-  journal={Psychology \& Health},
-  volume={38},
-  number={9},
-  pages={1234--1253},
-  year={2023},
-  publisher={Taylor \& Francis}
 }
 
 @article{davidson2016schizotypal,
@@ -825,50 +909,6 @@
   publisher={American Psychological Association}
 }
 
-@article{haustein2024interoception,
-  title={Interoception, affect, and cognition in older adults},
-  author={Haustein, Marcus and Thomas, Emily BK and Scheer, Kodi and Denburg, Natalie L},
-  journal={Experimental aging research},
-  volume={50},
-  number={3},
-  pages={279--295},
-  year={2024},
-  publisher={Taylor \& Francis}
-}
-
-@article{vig2023self,
-  title={Self-reported interoception, worries and protective behaviors during the COVID-19 pandemic: a longitudinal study},
-  author={Vig, Luca and Ferentzi, Eszter and K{\"o}teles, Ferenc},
-  journal={Psicologia: Reflex{\~a}o e Cr{\'\i}tica},
-  volume={36},
-  number={1},
-  pages={23},
-  year={2023},
-  publisher={Springer}
-}
-
-@article{rogowska2023validation,
-  title={Validation of the shortened 24-item multidimensional assessment of interoceptive awareness, version 2 (Brief MAIA-2)},
-  author={Rogowska, Aleksandra M and Tataruch, Rafa{\l} and Klimowska, Klaudia},
-  journal={Scientific Reports},
-  volume={13},
-  number={1},
-  pages={21270},
-  year={2023},
-  publisher={Nature Publishing Group UK London}
-}
-
-@article{simkute2025interoception,
-  title={Interoception, personality, and internet use: Preliminary insights into their association},
-  author={Simkute, Dovile and Wang, Grace Y and Griskova-Bulanova, Inga},
-  journal={PLoS One},
-  volume={20},
-  number={7},
-  pages={e0328260},
-  year={2025},
-  publisher={Public Library of Science San Francisco, CA USA}
-}
-
 @article{todd2022,
   title={Are some interoceptive sensibility components more central than others? Using item pool visualisation to understand the psychometric representation of interoception},
   author={Todd, Jennifer and Swami, Viren and Aspell, Jane E and Furnham, Adrian and Horne, George and Stieger, Stefan},
@@ -954,39 +994,6 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   publisher={Elsevier}
 }
 
-@article{rammstedt2007measuring,
-  title={Measuring personality in one minute or less: A 10-item short version of the Big Five Inventory in English and German},
-  author={Rammstedt, Beatrice and John, Oliver P},
-  journal={Journal of research in Personality},
-  volume={41},
-  number={1},
-  pages={203--212},
-  year={2007},
-  publisher={Elsevier}
-}
-
-@article{makowski2025measuring,
-  title={Measuring Depression and Anxiety with 4 items? Adaptation of the PHQ-4 to increase its Sensitivity to Subclinical Variability},
-  author={Makowski, Dominique and Te, An Shu and Neves, Ana and Chen, SH Annabel},
-  journal={Collabra: Psychology},
-  volume={11},
-  number={1},
-  pages={143431},
-  year={2025},
-  publisher={University of California Press}
-}
-
-@article{poerio2024interoceptive,
-  title={Interoceptive attention and mood in daily life: an experience-sampling study},
-  author={Poerio, Giulia L and Klabunde, Megan and Bird, Geoffrey and Murphy, Jennifer},
-  journal={Philosophical Transactions of the Royal Society B},
-  volume={379},
-  number={1908},
-  pages={20230256},
-  year={2024},
-  publisher={The Royal Society}
-}
-
 @article{mehling2018multidimensional,
   title={The multidimensional assessment of interoceptive awareness, version 2 (MAIA-2)},
   author={Mehling, Wolf E and Acree, Michael and Stewart, Anita and Silas, Jonathan and Jones, Alexander},
@@ -1030,11 +1037,21 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   year={1993}
 }
 
-@book{costa1992neo,
-  title     = {Revised NEO Personality Inventory (NEO PI-R) and NEO Five-Factor Inventory (NEO-FFI)},
+@article{donnellan2006mini,
+  title={The mini-IPIP scales: tiny-yet-effective measures of the Big Five factors of personality.},
+  author={Donnellan, M Brent and Oswald, Frederick L and Baird, Brendan M and Lucas, Richard E},
+  journal={Psychological assessment},
+  volume={18},
+  number={2},
+  pages={192},
+  year={2006},
+  publisher={American Psychological Association}
+}
+
+@book{costa1989neoffi,
+  title     = {NEO Five-Factor Inventory (NEO-FFI)},
   author    = {Costa, Paul T. and McCrae, Robert R.},
-  year      = {1992},
-  address   = {Odessa, FL},
+  year      = {1989},
   publisher = {Psychological Assessment Resources}
 }
 
